added img for hosting

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Git project</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <h1>Hello Git</h1>
+
+    <img
+      src="https://sm.pcmag.com/pcmag_in/feature/i/it-profess/it-professionals-read-this-article-if-you-think-youre-dramat_rvvw.jpg"
+      alt="hosting img"
+    />
 
     <script src="script.js"></script>
   </body>
